<resources>
    <string name="app_name">Hijab</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="code_or_phone">Code or Phone..</string>
    <string name="enter_atleast_three_character">Enter at least 3 character</string>
    <string name="new_bill">New Bill</string>
    <string name="scan">Scan</string>
    <string name="enter">Enter</string>
    <string name="confirm">Confirm</string>
    <string name="gpay">GPay</string>
    <string name="phonepe">PhonePe</string>
    <string name="cash">Cash</string>
    <string name="phone_number">Phone number</string>
    <string name="amount_paid">Amount paid</string>
    <string name="add">Add</string>
    <string name="product_name">Product name</string>
    <string name="product_code">Product code</string>
    <string name="product_size">Size</string>
    <string name="product_price">Product price</string>
    <string name="product_sale_price">Sale price</string>
    <string name="submit">Submit</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="pdf">PDF</string>
    <string name="cancel">Cancel</string>
    <string name="permanently_denied_permissions">Permanently denied: %s</string>
    <string name="rationale_permissions">Rationale: %s</string>
    <string name="ok">OK</string>
    <string name="permissions_required">Permissions required</string>
    <string name="request_again">Request again</string>
    <string name="abaya_boutique">Abaya Boutique</string>
    <string name="enter_product_type">Enter Product Type..</string>
    <string name="IMG_UPLOAD_API">6d207e02198a847aa98d0a2a901485a5</string>
    <string name="enter_code">Enter code…</string>
    <string name="please_enter_product_name">Please enter Product Name</string>
    <string name="please_enter_product_size">Please enter Product Size</string>
    <string name="please_enter_product_quantity">Please enter Available Quantity</string>
    <string name="please_enter_product_price">Please enter Product Price</string>
    <string name="please_enter_sale_price">Please enter Sale Price</string>
    <string name="please_enter_product_code">Please enter Product Code</string>
    <string name="quantity">Quantity</string>
</resources>