<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        tools:context=".ui.paymentType.PaymentTypeBottomSheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <include
                android:id="@+id/include2"
                layout="@layout/common_top_close_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:weightSum="3"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include2">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/gPayBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_round_grey_stroke"
                    android:clickable="true"
                    android:gravity="center"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/gPayTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/gpay"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="6dp"
                        app:srcCompat="@drawable/gpay_ico" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/phonePeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_white_round_grey_stroke"
                    android:clickable="true"
                    android:gravity="center"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/phonePeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/phonepe"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="6dp"
                        app:srcCompat="@drawable/phonepe_ico" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/cashPayBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_round_grey_stroke"
                    android:clickable="true"
                    android:gravity="center"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/cashPayTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/gpay"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="6dp"
                        app:srcCompat="@drawable/cashpay_ico" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneNumberEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edittext_white_round"
                android:fontFamily="@font/inter"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="12"
                android:padding="15dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paidAmountEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edittext_white_round"
                android:fontFamily="@font/inter"
                android:hint="@string/amount_paid"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="12"
                android:padding="15dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEdt" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/teal_700"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/paidAmountEdt"
                app:layout_constraintStart_toStartOf="@+id/paidAmountEdt"
                app:layout_constraintTop_toBottomOf="@+id/paidAmountEdt">

                <TextView
                    android:id="@+id/confirmTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/confirm"
                    android:textColor="@color/white" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="6dp"
                    app:srcCompat="@drawable/check_white_ico" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>