<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.addProduct.AddProductFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="33dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="33dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/hijab_ico" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/closeBtn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
                        app:srcCompat="@drawable/ic_close" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/proCodeEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:background="@drawable/bg_edittext_white_round"
                    android:fontFamily="@font/inter"
                    android:hint="@string/product_code"
                    android:imeOptions="actionNext"
                    android:maxLength="10"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/proNameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:background="@drawable/bg_edittext_white_round"
                    android:fontFamily="@font/inter"
                    android:hint="@string/product_name"
                    android:imeOptions="actionNext"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryRec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
                    tools:listitem="@layout/product_category_rec_lyt" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/proSizeEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:background="@drawable/bg_edittext_white_round"
                    android:fontFamily="@font/inter"
                    android:hint="@string/product_size"
                    android:imeOptions="actionNext"
                    android:maxLength="3"
                    android:padding="15dp"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/proPriceEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/bg_edittext_white_round"
                    android:fontFamily="@font/inter"
                    android:hint="@string/product_price"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="12"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/proSalePriceEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:maxLines="1"
                    android:background="@drawable/bg_edittext_white_round"
                    android:fontFamily="@font/inter"
                    android:hint="@string/product_sale_price"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="12"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/chooseImage"
                    android:layout_width="90dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:background="@drawable/bg_edittext_white_round">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/choose_img_ico" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/chosenImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/customRoundedImageView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/submitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/teal_700"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/confirmTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/submit"
                        android:textColor="@color/white" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="6dp"
                        app:srcCompat="@drawable/check_white_ico" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>